syntax = "proto3";

package pcbook;

import "proto/memory_message.proto";

option go_package = "./;pcbook";

message CPU { // message first letter is always capital
  string brand = 1; // lowercase letters with underscores
  string anme = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}
